--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
 
 jobs:
@@ -71,7 +71,6 @@ jobs:
           for i in $(seq -w 1 25); do
             var="DAY_${i}_INPUT"
             dir="src/solvers/d${i}"
-            mkdir -p "$dir"
             printf '%s' "${!var}" > "$dir/input.txt"
           done
       - name: Run tests without coverage for performance times
